<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="10dp"
    android:paddingTop="30dp"
    android:orientation="vertical" >
    
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    
    <EditText android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_email"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        />
    
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/password"
        />
    
    <EditText android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        />
    
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/login"/>
    
    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_sign_up"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/sign_up"/>
    
    

</LinearLayout>
