<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        >
        <ImageView 
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/pig"
            android:scaleType="fitXY"
            android:id="@+id/home_logo_left"
            android:contentDescription="@string/home_logo_content"
            android:layout_marginRight="2dp"
            />
        <TextView 
            android:id="@+id/home_menu_right"
            android:layout_width="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/threelines"
            android:clickable="true"
            android:scaleType="fitXY"
            android:onClick="showRightMenu"
            android:layout_height="50dp"/>
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/home_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_alignTop="@id/home_logo_left"
            android:layout_alignBottom="@id/home_logo_left"
            android:layout_toRightOf="@id/home_logo_left"
            android:layout_toLeftOf="@id/home_menu_right"
            />
    </RelativeLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button 
            android:id="@+id/home_personal_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@android:attr/buttonBarButtonStyle"
            android:singleLine="true"
            android:textSize="14sp"
            android:text="@string/home_personal_info"/>
        <Button 
            android:id="@+id/home_my_stamp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:textSize="14sp"
            style="@android:attr/buttonBarButtonStyle"
            android:text="@string/home_my_stamp"/>
        
    </LinearLayout>
    
    <ImageView android:id="@+id/home_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/home_picture_content"
        android:src="@drawable/rabbit"
        android:scaleType="fitXY"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
